--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
     "angular-animate": "~1.2.0",
-    "inuit.css": "~5.0.0"
+    "inuit.css": "~5.0.0",
+    "foundation": "~5.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
