--- a/app/themes/commongoodv2/package.json
+++ b/app/themes/commongoodv2/package.json
@@ -70,6 +70,7 @@
     "jquery": "^3.1.1",
     "lazysizes": "3.0.0-rc4",
     "lg-video.js": "^1.0.0",
-    "picturefill": "3.0.2"
+    "picturefill": "3.0.2",
+    "swiper": "^3.4.1"
   }
 }
